--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background-color: #e2f6fa;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,4 +14,118 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+td,
+th,
+tr,
+table {
+  border-collapse: collapse;
+  text-transform: capitalize;
+}
+h1 {
+  text-align: center;
+  width: 100%;
+}
+
+table {
+  width: 100%;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+td,
+th {
+  border: 1px solid rgb(141, 141, 141);
+  padding: 12px;
+}
+
+tr:nth-child(even) {
+  background-color: #00000011;
+}
+tr:first-of-type {
+  background-color: #3989b8;
+  color: #f2f2f2;
+  font-weight: bold;
+  font-size: 18px;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.76);
+}
+tr:first-of-type:hover {
+  cursor: pointer;
+
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                supported by Chrome, Edge, Opera and Firefox */
+}
+tr:first-of-type > td:hover {
+  background-color: hsl(202, 90%, 47%);
+}
+td:hover {
+  background-color: rgba(0, 0, 0, 0.048);
+}
+
+tr > td:first-of-type > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1rem;
+  font-size: 20px;
+  font-weight: 500;
+}
+tr > td:first-of-type > div > p {
+  width: 100%;
+}
+td {
+  transition: background 250ms ease-in-out, transform 150ms ease;
+}
+th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4caf50;
+  color: white;
+}
+
+button {
+  padding: 1rem;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: bold;
+
+  display: inline-block;
+  border: none;
+  padding: 1rem 2rem;
+  margin: 0;
+  text-decoration: none;
+  background: #7bd8ac;
+  color: #0f0f0f;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.397);
+  border-radius: 5px;
+  text-align: center;
+  transition: background 250ms ease-in-out, transform 150ms ease;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+button:hover,
+button:focus {
+  background: #2cf396;
+}
+
+button:focus {
+  outline: 1px solid #fff;
+  outline-offset: -4px;
+}
+
+button:active {
+  transform: scale(0.99);
+}
+
+p {
+  margin: 0.2rem 0;
 }
